--- a/frontend/styles/base.css
+++ b/frontend/styles/base.css
@@ -64,8 +64,8 @@ h1 {margin-top: 0;}
 
 /* containers */
 .wrapper {
-    display: flex;
     background: var(--bg-wrapper);
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
@@ -73,6 +73,10 @@ h1 {margin-top: 0;}
     min-height: 100vh;
 }
 .content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
     width: 100%;
 }
 .container {
@@ -93,7 +97,6 @@ h1 {margin-top: 0;}
 @media only screen and (min-width: 1400px) and (max-width: 9999px) {
 
 }
-
 @media only screen and (min-width: 1400px) {
     * {
         --container-width: 1280px;
@@ -106,6 +109,7 @@ h1 {margin-top: 0;}
         width: var(--container-width);
     }   
 }
+
 
 
 @media only screen and (min-width: 1200px) and (max-width: 1400px) {
