--- a/frontend/styles/base.css
+++ b/frontend/styles/base.css
@@ -36,6 +36,9 @@
     --shadow-little: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+body {
+    background: var(--bg-wrapper);
+}
 
 /* typography */
 p, 
@@ -64,7 +67,6 @@ h1 {margin-top: 0;}
 
 /* containers */
 .wrapper {
-    background: var(--bg-wrapper);
     display: flex;
     flex-direction: column;
     align-items: center;
