--- a/frontend/styles/base.css
+++ b/frontend/styles/base.css
@@ -34,6 +34,8 @@
 
     --container-margins: 80px;
 
+    --transition-regular: 0.3s;
+
     --shadow-regular: 0 0 15px rgba(0, 0, 0, 0.1);
     --shadow-little: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -52,6 +54,10 @@ a {
     color: var(--color-link);
     cursor: pointer;
     text-decoration: none;
+}
+
+b {
+    font-weight: 600;
 }
 
 p {margin-bottom: 1rem;}
