Frontend: bug fix

--- a/frontend/styles/base.css
+++ b/frontend/styles/base.css
@@ -222,6 +222,8 @@ h1 {margin-top: 0;}
     * {
         --container-width: 100%;
         --container-padding: 0 16px;
+
+        --container-margins: 50px; 
     }
 
 
