--- a/frontend/styles/navigation.css
+++ b/frontend/styles/navigation.css
@@ -220,10 +220,19 @@ nav > ul > li {
     nav ul {
         flex-direction: column;
     } 
+    nav ul li {
+        margin-bottom: 20px;
+    }
     
     nav li.open .nav-drop-down {
         display: flex;
         flex-direction: column;
+    }
+    .nav-drop-down {
+        margin-top: 10px; 
+    }
+    .nav-drop-down a:not(:last-child) {
+        margin-bottom: 5px;
     }
 
     /* active */
