--- a/frontend/styles/index.module.css
+++ b/frontend/styles/index.module.css
@@ -6,14 +6,21 @@
     text-align: center;
     position: relative;
 }
+.news_image_wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
 .news_image_wrapper img {
     display: block;
-    width: 100%;
-    position: relative;
-    top: 0;
-    left: 0;
-    object-fit: cover;
     flex-shrink: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    -o-object-fit: cover;
+    position: absolute;
     z-index: -1;
 }
 .blur_news_image {
@@ -86,9 +93,6 @@
 
 /* Mobile devices */
 @media only screen and (min-width: 0px) and (max-width: 480px) {
-    .news_image_wrapper img {
-        min-height: 250px;
-    }
     .news_details {
         margin-top: 40px;
     }
@@ -97,5 +101,36 @@
     }
     .news_details a {
         font-size: 16px;
+    }
+}
+
+
+/* fixe header with image */
+@media only screen and (min-width: 1700px) {
+    .header {
+        width: var(--container-width);
+    }
+}
+
+@media only screen and (min-height: 800px) {
+    .news_image_wrapper {
+        height: 600px;
+    }
+}
+@media only screen and (min-height: 480px) and (max-height: 800px) {
+    .news_image_wrapper {
+        height: 100vh;
+    }
+}
+@media only screen and (min-width: 0px) {
+    @media only screen and (min-height: 0) and (max-height: 1000px) {
+        .news_image_wrapper {
+            height: 100vh;
+        }
+    }
+}
+@media only screen and (min-width: 0px) and (max-width: 480px) {
+    .news_image_wrapper {
+        height: 300px;
     }
 }
