--- a/frontend/components/News/new-block.module.css
+++ b/frontend/components/News/new-block.module.css
@@ -88,6 +88,9 @@
     padding: 30px;
     z-index: 2;
 }
+.news_block_view .news_description h4 {
+    margin: 0 0 8px 0;
+}
 .news_block_view .news_description_fill {
     display: flex;
     flex-direction: column;
