--- a/frontend/styles/base.css
+++ b/frontend/styles/base.css
@@ -104,7 +104,9 @@ h1 {margin-top: 0;}
     flex-direction: column;
     align-items: center;
 }
-
+.text-wrapper {
+    width: 100%;
+}
 
 /* Extra large screens, TV */
 @media only screen and (min-width: 1400px) and (max-width: 9999px) {
