--- a/frontend/styles/base.css
+++ b/frontend/styles/base.css
@@ -105,8 +105,9 @@ h1 {margin-top: 0;}
     align-items: center;
 }
 .text-wrapper {
-    width: 100%;
+    margin: 0 auto;
 }
+
 
 /* Extra large screens, TV */
 @media only screen and (min-width: 1400px) and (max-width: 9999px) {
@@ -123,6 +124,9 @@ h1 {margin-top: 0;}
     .container {
         width: var(--container-width);
     }   
+    .text-wrapper {
+        width: 80%;
+    }
 }
 
 
@@ -138,6 +142,9 @@ h1 {margin-top: 0;}
     .container {
         width: var(--container-width);
         padding: var(--container-padding);
+    }
+    .text-wrapper {
+        width: 80%;
     }
 }
 
@@ -155,6 +162,9 @@ h1 {margin-top: 0;}
         width: var(--container-width);
         padding: var(--container-padding);
     }
+    .text-wrapper {
+        width: 70%;
+    }
 }
 
 
@@ -170,6 +180,9 @@ h1 {margin-top: 0;}
     .container {
         width: var(--container-width);
         padding: var(--container-padding);
+    }
+    .text-wrapper {
+        width: 90%;
     }
 }
 
@@ -200,6 +213,9 @@ h1 {margin-top: 0;}
     .container {
         width: var(--container-width);
         padding: var(--container-padding);
+    }
+    .text-wrapper {
+        width: 100%;
     }
 }
 
@@ -247,5 +263,8 @@ h1 {margin-top: 0;}
     .container {
         width: var(--container-width);
         padding: var(--container-padding);
+    }
+    .text-wrapper {
+        width: 100%;
     }
 }
