--- a/frontend/components/News/new-block.module.css
+++ b/frontend/components/News/new-block.module.css
@@ -97,11 +97,12 @@
     justify-content: flex-end;
     flex: 1;
     height: 100%;
+    width: 100%;
     position: absolute;
     top: 0;
     left: 0;
     padding: 30px;
-    z-index: 20;
+    z-index: 3;
 }
 .news_block_view .news_description_fill * {
     color: var(--color-revert);
