--- a/frontend/styles/footer.css
+++ b/frontend/styles/footer.css
@@ -67,7 +67,17 @@ footer span {
 
 @media only screen and (min-width: 1400px) {
     .useful-links {
-        display: flex;
+        flex: 1 1;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-column-gap: 10px;
+        min-width: 0;
+        margin-bottom: 20px;
+        text-align: center;
+        white-space: nowrap;
+    }
+    .useful-links {
+        /* display: flex; */
         justify-content: space-evenly;
     }
     .useful-wrapper {
