--- a/frontend/components/News/new-block.module.css
+++ b/frontend/components/News/new-block.module.css
@@ -66,7 +66,7 @@
     z-index: 0;
 }
 .news_block_view .image_wrapper div {
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.04) 72.71%, #000000 100%);
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.25) 60%, rgba(0, 0, 0, 0.45) 100%);
     height: 100%;
     width: 100%;
     position: absolute;
@@ -76,12 +76,18 @@
     bottom: 0;
     z-index: 1;
 }
+.news_description > div {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
 .news_block_view .news_description {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     flex: 1;
     height: 100%;
+    width: 100%;
     position: absolute;
     top: 0;
     left: 0;
@@ -108,7 +114,11 @@
     color: var(--color-revert);
 }
 .news_block_view .news_description_fill h4 {
-    margin: 16px 0 0 0;
+    margin: 8px 0 0 0;
+}
+.shor_description_wrapper  {
+    flex: 1;
+    max-height: 100%;
 }
 
 /* Extra large screens, TV */
