--- a/frontend/components/Article/details.module.css
+++ b/frontend/components/Article/details.module.css
@@ -11,15 +11,16 @@
     margin-top: 0;
     margin-bottom: 8px;
 }
-.image {
+.news_image {
     flex-shrink: 1;
-    width: 100%;
     height: 100%;
+    width: 100%;
     object-fit: cover;
+    position: relative;
 }
 .image_wrapper {
-    border-radius: var(--br-regular);
     box-shadow: var(--shadow-regular);
+    border-radius: var(--br-regular);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -28,4 +29,47 @@
     max-height: 100vh;
     overflow: hidden;
     position: relative;
+}
+
+
+/* XS / Extra small */
+@media only screen and (min-width: 0px) and (max-width: 480px) {
+    .image_wrapper {
+        max-height: 350px;
+    }
+}
+
+/* SM / Small */
+@media only screen and (min-width: 481px) and (max-width: 768px) {
+    .image_wrapper {
+        max-height: 350px;
+    }
+}
+
+/* MD / Medium */
+@media only screen and (min-width: 769px) and (max-width: 992px) {
+    .image_wrapper {
+        max-height: 450px;
+    }
+}
+
+/* LG / Large */
+@media only screen and (min-width: 993px) and (max-width: 1200px) {
+    .image_wrapper {
+        max-height: 450px;
+    }
+}
+
+/* XL / Extra large */
+@media only screen and (min-width: 1201px) and (max-width: 1400px) {
+    .image_wrapper {
+        max-height: 450px;
+    }
+}
+
+/* XXL / Extra extra large */
+@media only screen and (min-width: 1401px) {
+    .image_wrapper {
+        max-height: 450px;
+    }
 }
