--- a/frontend/styles/base.css
+++ b/frontend/styles/base.css
@@ -20,6 +20,7 @@
     --color-danger: #EB3030;
     --color-warning: #FF9F2F;
     --color-success: #31DD57;
+    --color-panel-nothing: 170, 170, 170;
 
     --color-title: #1D1D1F;
     --color-link: #0066CC;
