--- a/frontend/components/study/library-view.module.css
+++ b/frontend/components/study/library-view.module.css
@@ -5,6 +5,7 @@
     border-radius: var(--br-regular);
     box-shadow: var(--shadow-regular);
     width: 100%;
+    min-height: 180px;
     position: relative;
     overflow: hidden;
 }
